--- a/src/envcontrol.tex
+++ b/src/envcontrol.tex
@@ -88,7 +88,7 @@
 			\fi
 		\else%
 			\Trigger\BeginProblem%
-			\Trigger\VeryBeginProblem\par%
+			\Trigger\VeryBeginProblem%
 		\fi%
 	}%
 	% Special case: solutions only
