--- a/exercises/firstexercise.tex
+++ b/exercises/firstexercise.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../example.tex
-% \nextproblem{solution only}
+\nextproblem{solution only}
 \begin{problem}
   PROBLEM 1
 \end{problem}
