--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -89,6 +89,7 @@
     \change{Possibility to toggle whether part problem header showing if only one part problem is displayed \refKey{show lonely part problems}}
     % \change{Removed docs for \orderedselect since it's not implemented yet}
     \change{Fixed TeX capacity exceeded error for long exercises.}
+    \change{Added \dac\thisfilepath for getting path of current exercisefile}
 \chlogtable
 
 
