--- a/release/exercisebank-doc.tex
+++ b/release/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.2.3b131 - 2019/02/26
-%% The LaTeX package exercisebank - version v0.2.3 (2019/02/26) build 131
+%% exercisebank v0.2.3b132 - 2019/03/08
+%% The LaTeX package exercisebank - version v0.2.3 (2019/03/08) build 132
 %% Manual/Documentation for exercisebank.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -127,7 +127,7 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{exercisebank - manual\\ v0.2.3{\\[-0.5em]\footnotesize(build 131)}}}
+\title{{exercisebank - manual\\ v0.2.3{\\[-0.5em]\footnotesize(build 132)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
@@ -320,7 +320,7 @@ That covers the basics. Enjoy
 Turns on the solutions, so they are shown.
 \end{docCommand}
 \begin{docCommand}{SolutionsOnly}{}\addcontentsline{toc}{subsubsection}{\refCom{SolutionsOnly}}
-\defnew{v0.2.3\\2019/02/26 }
+\defnew{v0.2.3\\2019/03/08 }
 Displays only solutions (if there are any) to the part problem
 \end{docCommand}
 \begin{docEnvironment}{problem}{}
@@ -375,7 +375,7 @@ This contains information about an exercise set. It is intended to be on the top
 exercise, explaining short what the exercise is about. It's only visible when using \dac{sprite}
 \end{docCommand}
 \begin{docCommand}{buildall}{}\addcontentsline{toc}{subsubsection}{\refCom{buildall}}
-\defnew{v0.2.3\\2019/02/26 }
+\defnew{v0.2.3\\2019/03/08 }
  Build all sets defined with \dac{makeset}
 \end{docCommand}
 \begin{docCommand}{sprite}{\oarg{PiP}}\addcontentsline{toc}{subsubsection}{\refCom{sprite}}
@@ -426,7 +426,7 @@ As you can see in the intro section of the documentation, this is for cherry pic
 To be used in \refCom{makeset}
 \end{docCommand}
 \begin{docCommand}{buildset}{\oarg{intro|nohead|nointro}\marg{setname}}\addcontentsline{toc}{subsubsection}{\refCom{buildset}}
-\updated{v0.2.3\\2019/02/26 }
+\updated{v0.2.3\\2019/03/08 }
 This command runs the set given. The set has do be defined by \dac{makeset}. E.eg
 \begin{dispListing}
 \makeset{myExerciseSet}{exercisefile1, \select{exercisefile2}{1,2}}
@@ -473,7 +473,7 @@ Labels a partproblem. You can reference to it later using \dac{ppref}\{\meta{lab
 Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.g. 1c)
 \end{docCommand}
 \begin{docCommand}{ppgref}{\marg{label}}\addcontentsline{toc}{subsubsection}{\refCom{ppgref}}
-\defnew{v0.2.3\\2019/02/26 }
+\defnew{v0.2.3\\2019/03/08 }
 Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This can be used for \emph{global} exercises.
 \end{docCommand}
 \begin{docCommand}{pref}{\marg{label}}\addcontentsline{toc}{subsubsection}{\refCom{pref}}
@@ -481,15 +481,15 @@ Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This can be us
  Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.g. 1
 \end{docCommand}
 \begin{docCommand}{pgref}{\marg{label}}\addcontentsline{toc}{subsubsection}{\refCom{pgref}}
-\defnew{v0.2.3\\2019/02/26 }
+\defnew{v0.2.3\\2019/03/08 }
  Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.g. 1, but have global search.
 \end{docCommand}
 \begin{docCommand}{HideTags}{\marg{list}}\addcontentsline{toc}{subsubsection}{\refCom{HideTags}}
-\updated{v0.2.3\\2019/02/26 }
+\updated{v0.2.3\\2019/03/08 }
 Hide all exercises containing the list of tags when building a set.
 \end{docCommand}
 \begin{docCommand}{ShowAllTags}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowAllTags}}
-\defnew{v0.2.3\\2019/02/26 }
+\defnew{v0.2.3\\2019/03/08 }
 Reset tags set by \dac{HideTags}
 \end{docCommand}
 \filbreak\subsection{Configuration and options}
@@ -501,11 +501,11 @@ You can do a lot of configurations on this package, and probably
  \dac{exclude} and \dac{select}
 \end{docCommand}
 \begin{docCommand}{ShowTags}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowTags}}
-\updated{v0.2.3\\2019/02/26 }
+\updated{v0.2.3\\2019/03/08 }
  Shows the tags in front of the part problems much like \dac{ShowNumbers}
 \end{docCommand}
 \begin{docCommand}{ShowFilenames}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowFilenames}}
-\updated{v0.2.3\\2019/02/26 }
+\updated{v0.2.3\\2019/03/08 }
  Shows the path+filename to the current exercise file
 \end{docCommand}
 \begin{docCommand}{exercisebanksetup}{\marg{\oarg{key/values}}}\addcontentsline{toc}{subsubsection}{\refCom{exercisebanksetup}}
@@ -619,7 +619,7 @@ The Norwegian translation would then be done with
 \end{docCommand}
 \filbreak\subsection{Problem options: points and tagging}
 \begin{docCommand}{nextproblem}{}\addcontentsline{toc}{subsubsection}{\refCom{nextproblem}}
-\updated{v0.2.3\\2019/02/26 }
+\updated{v0.2.3\\2019/03/08 }
 Prior to a problem environment in an exercise file you can pass options
 using the \dac{nextproblem} command. If you e.g. wanted to hide one regardless
 of what set it is you'd do
@@ -673,7 +673,7 @@ Here are the \dac{nextproblem} keys:
 Contains the total number of points for all exercises in the current set
 \end{docCommand}
 \begin{docCommand}{exercisepoints}{}\addcontentsline{toc}{subsubsection}{\refCom{exercisepoints}}
-\defnew{v0.2.3\\2019/02/26 }
+\defnew{v0.2.3\\2019/03/08 }
  Contains the total number of points in the current exercise (or "Problem")
 \end{docCommand}
 \filbreak\subsection{Triggers}
@@ -723,11 +723,11 @@ where the package should be looking for exercises. Default is the same directory
  else executes \meta{False}
 \end{docCommand}
 \begin{docCommand}{exercisebankversion}{}\addcontentsline{toc}{subsubsection}{\refCom{exercisebankversion}}
-\defnew{v0.2.3\\2019/02/26 }
+\defnew{v0.2.3\\2019/03/08 }
  Prints the current version and build to the error log
 \end{docCommand}
 \begin{docCommand}{exercisebankbuild}{}\addcontentsline{toc}{subsubsection}{\refCom{exercisebankbuild}}
-\defnew{v0.2.3\\2019/02/26 }
+\defnew{v0.2.3\\2019/03/08 }
  Prints the current build number to the error log
 \end{docCommand}
 This package also includes some extra stuff. For example the \dac{At} and \dac{Trigger}
@@ -740,10 +740,15 @@ This package also includes some extra stuff. For example the \dac{At} and \dac{T
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{@rigid}{}\addcontentsline{toc}{subsubsection}{\refCom{@rigid}}
-\defnew{v0.2.3\\2019/02/26 }
+\defnew{v0.2.3\\2019/03/08 }
 Used to make \dac{At} so that the contents won't be deleted
 with \dac{ClearHook}. Note that the necessary hooks might not be
  registered as rigid. Thus show caution when deleting hooks
+\end{docCommand}
+\begin{docCommand}{thisfilepath}{}\addcontentsline{toc}{subsubsection}{\refCom{thisfilepath}}
+
+ Contains the path to the exercisefile relative to the build file.
+ Useful for inputing files in the same directory as an exercisefile.
 \end{docCommand}
 \begin{docCommand}{exerciseFile}{}\addcontentsline{toc}{subsubsection}{\refCom{exerciseFile}}
 
@@ -834,6 +839,7 @@ Distance above Problem \# header
 \addcontentsline{mac}{macro}{\refCom{setName}}{}
 \addcontentsline{mac}{macro}{\refCom{sprite}}{}
 \addcontentsline{mac}{macro}{\refCom{spritesets}}{}
+\addcontentsline{mac}{macro}{\refCom{thisfilepath}}{}
 \addcontentsline{mac}{macro}{\refCom{totalpoints}}{}
 \addcontentsline{mac}{macro}{\refCom{translateExBank}}{}
 
@@ -905,7 +911,7 @@ Distance above Problem \# header
 \newversion{v0.2.2 2018/10/04}
     \change{Made trailing commas ignored in all lists (\dac\makeset,\dac\buildset,\dac\select,\dac\exclude, etc.)}
     \change{Fixed bug where tags wouldn't hide.}
-\newversion{v0.2.3 2019/02/26}
+\newversion{v0.2.3 2019/03/08}
     \change{Added possibility of custom part problem header from \dac\nextproblem}
     \change{Added possibility of showing problem only when \dac\DisplaySolutions active}
     \change{Corrected use of the length \dac\ppMarginBelow}
@@ -933,6 +939,7 @@ Distance above Problem \# header
     \change{Possibility to toggle whether part problem header showing if only one part problem is displayed \refKey{show lonely part problems}}
     % \change{Removed docs for \orderedselect since it's not implemented yet}
     \change{Fixed TeX capacity exceeded error for long exercises.}
+    \change{Added \dac\thisfilepath for getting path of current exercisefile}
 \chlogtable
 
 
