--- a/release/exercisebank.sty
+++ b/release/exercisebank.sty
@@ -1,5 +1,5 @@
 % Source (with comments) can be found at https://github.com/Strauman/exercisebank/
-%% The LaTeX package exercisebank - version v0.2.3 (2019/02/26) - build 131
+%% The LaTeX package exercisebank - version v0.2.3 (2019/03/08) - build 132
 %% exercisebank.sty: Exercise bank
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman <andreas dot s dot strauman at uit dot no>
@@ -13,9 +13,9 @@
 %% version 2008/05/04 or later.
 %% This work has the LPPL maintenance status `author-maintained'.
 %% This work consists of all files listed in README
-\ProvidesPackage{exercisebank}[2019/02/26 v0.2.3 Creates a setup that gives freedom in making sets and exercises.]
+\ProvidesPackage{exercisebank}[2019/03/08 v0.2.3 Creates a setup that gives freedom in making sets and exercises.]
 \xdef\exbank@quiet{1}
-\def\exercisebankversion{v0.2.3 - Build 131}
+\def\exercisebankversion{v0.2.3 - Build 132}
 \PackageWarningNoLine{exercisebank-v0.2.3}{This package is in the beta stage, and if something unexpected happens please, oh pretty please, report it to https://github.com/Strauman/exercisebank. Thank you!}
 \@ifundefined{ownLineNoSpacesGotIt}{\@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \@backslashchar usepackage{exercisebank}}
 }{}
@@ -205,8 +205,8 @@
 \newtoks\everypar
 \oldep{\the\everypar\@AtNextParHook\relax\gdef\@AtNextParHook{}}
 \def\AtNextPar#1{\g@addto@macro\@AtNextParHook{#1}}
-\gdef\exercisebankversion{\PackageWarningNoLine{exercisebank}{Version v0.2.3b131}}
-\gdef\exercisebankbuild{\PackageWarningNoLine{exercisebank}{Build 131}}
+\gdef\exercisebankversion{\PackageWarningNoLine{exercisebank}{Version v0.2.3b132}}
+\gdef\exercisebankbuild{\PackageWarningNoLine{exercisebank}{Build 132}}
 \edef\@isTrue{1}
 \edef\@isFalse{0}
 \gdef\ShowNumbers{\gdef\@displayMetaCounter{\isTrue}}
@@ -368,6 +368,7 @@ switches/.cd,
 }
 \xdef\figuresPath{\@figrootDir/}
 \gdef\fileInputPath{}
+\gdef\thisfilepath{} %
 \gdef\fileInputBase{}
 \@ifundefined{input@path}{\gdef\input@path{}}{}
 \AtBeginDocument{%
@@ -379,6 +380,7 @@ switches/.cd,
 \At\PathControl{  \xdef\figuresPath{\@figrootDir/}
   \edef\exfile{\exerciseFile}
   \expandafter\filename@parse{\exfile}
+  \xdef\thisfilepath{\@exercisesDir/\filename@area}
   \xdef\fileInputPath{\figuresPath\filename@area}
   \xdef\fileInputBase{\figuresPath\filename@area\filename@base/}
 }
@@ -443,7 +445,7 @@ switches/.cd,
 \fi%
 \ifexb@showCurrent@PPHeader%
 \AtNextPar{\exb@pp@lefttag\global\let\exb@pp@lefttag\relax\Trigger\AfterPPHeader}\par%
-\else
+\else%
 \par%
 \fi\ignorespaces}%
 \At\EndPartproblem{%
@@ -472,15 +474,22 @@ switches/.cd,
 \providecommand\exb@currentTags{}
 \providecommand\exb@nextprob@header{}
 \pgfkeys{/exbank/problems/.cd,%
-default/.style={hide=false,tag=\relax,reset pp head},%
+initial style/.style={hide=false,tag=\relax,reset pp head},%
+default/.style={initial style},
 hide/.is if={exb@opthides},%
 tags/.estore in=\exb@currentTags,%
 tag/.code={\pgfkeysalso{tags={#1}}},
 head/.code={\global\exb@b@nextprob@headertrue\gdef\exb@nextprob@header{#1}},%
 reset pp head/.code={\global\exb@b@nextprob@headerfalse},
-solution only/.code={\ifexb@DisplaySolutions\else\pgfkeysalso{/exbank/problems/hide=true}\fi}
+solution only/.code={\ifexb@DisplaySolutions\else\pgfkeysalso{/exbank/problems/hide=true}\fi},
+reset to default/.code=\pgfkeysalso{/exbank/problems/default/.style={initial style}}
 }
 \def\nextproblem{\pgfqkeys{/exbank/problems}}
+\def\resetnextproblems{\nextproblem{reset to default}}
+\def\nextproblems#1{%
+\edef\nextprobargs{{default/.style={#1}}}%
+\expandafter\nextproblem\nextprobargs%
+}
 \newcounter{exb@cutfilecounter}
 \global\let\do@ProcessCutFile = \ProcessCutFile
 \At\EndProblem{%
