Margin fixes + \buildsprite command

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -90,6 +90,7 @@
     % \change{Removed docs for \orderedselect since it's not implemented yet}
     \change{Fixed TeX capacity exceeded error for long exercises.}
     \change{Added \dac\thisfilepath for getting path of current exercisefile}
+    \change{Changed default spacing}
 \chlogtable
 
 
