--- a/src/envcontrol.tex
+++ b/src/envcontrol.tex
@@ -137,7 +137,7 @@
 	\ifexb@DisplayCurrentSolution%
 		\Trigger\EndSolution
 		\tighten@paragraph@solutions
-		\vspace*{0.5em}
+		\vspace{0.5em}
 	\fi
 	\endgroup
 	\Trigger\EndSolutionHard\@dinfo{END solution ENV}%
