--- a/src/lengths.tex
+++ b/src/lengths.tex
@@ -33,7 +33,7 @@
 \setlength\parindent{0pt}
 % Problem margins:
 \setlength{\pMarginLeft}{-\ppMargin-2.5em}
-\setlength{\pMarginBelow}{1em}
+\setlength{\pMarginBelow}{1.5em \@plus .5em \@minus .5em}
 \setlength{\pMarginAbove}{0pt}
 % Part problem margin
 \setlength{\ppMargin}{0.5em}
