--- a/src/problemstyle.tex
+++ b/src/problemstyle.tex
@@ -70,7 +70,7 @@
 	\global\exb@showCurrent@PPHeadertrue
 }
 
-\At\BeginSolution{\ifexb@solutionsonly\else\hfill\break\vspace*{\solutionMarginAbove}\fi{\exbank@opt@solutionHeader}}
+\At\BeginSolution{\ifexb@solutionsonly\else\hfill\break\vspace{\solutionMarginAbove}\fi{\exbank@opt@solutionHeader}}
 \At\EndSolution{}
 
 % Don't show part problem header if only one part problem
