--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -61,7 +61,7 @@
 \newversion{v0.2.2 2018/10/04}
     \change{Made trailing commas ignored in all lists (\dac\makeset,\dac\buildset,\dac\select,\dac\exclude, etc.)}
     \change{Fixed bug where tags wouldn't hide.}
-\newversion{@@VERSION @@DATE}
+\newversion{v0.3.0 2019/03/18}
     \change{Added possibility of custom part problem header from \dac\nextproblem}
     \change{Added possibility of showing problem only when \dac\DisplaySolutions active}
     \change{Corrected use of the length \dac\ppMarginBelow}
@@ -87,10 +87,10 @@
     \change{Added \dac\exercisebankversion and \dac\exercisebankbuild}
     \change{Part problem header now showing if only one part problem is displayed}
     \change{Possibility to toggle whether part problem header showing if only one part problem is displayed \refKey{show lonely part problems}}
-    % \change{Removed docs for \orderedselect since it's not implemented yet}
     \change{Fixed TeX capacity exceeded error for long exercises.}
     \change{Added \dac\thisfilepath for getting path of current exercisefile}
     \change{Changed default spacing}
+    \change{Added \dac\buildsprite}
 \chlogtable
 
 
