Fixes \ShowFilenames. Fix #110

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -91,6 +91,9 @@
     \change{Added \dac\thisfilepath for getting path of current exercisefile}
     \change{Changed default spacing}
     \change{Added \dac\buildsprite}
+\newversion{@@VERSION @@DATE}
+    \change{Made \dac\exercisenote long (can now deal with multiple lines).}
+    \change{Fixed bug where \dac\ShowFilenames would crash when filename has underscore.}
 \chlogtable
 
 
